# ai-agent-fastapi-langchain

./: .gitignore  Intelligent Travel Assistant FiftWall.pptx  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: sql_flow.py
app/core/: retrieval_flow_v3.py
app/db/: database.py
app/services/: huggingface.py  openai.py  supabase.py
archive/: results_except.txt
chroma_db/: chroma.sqlite3
data/: TravelPlanner-info.txt  TravelPlanner_sections.json
scripts/: chroma_test.py  chroma_vector_store.py  huggingface-data.py  project_structure_gen.py  retrieval_flow_test.py  retrieval_flow_v1.py  retrieval_flow_v2.py  sections_preprocessing.py  supabase-table.py  vector-retrieve-supabase.py  vector-table-supabase.py
